# fuzzydate

./: README.md  pyproject.toml
fuzzydate/: __init__.py  fuzzydate.py
tests/: fuzzydate_test.py
